Auto stash before merge of "main" and "origin/main"

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,167 @@ dmypy.json
 .pyre/
 
 .idea/
+
+data/
+
+dataset/gp_files/Bob Marley/Bob Marley - Waiting In Vain (ver 3 by Mauriciobasalo).gp5
+
+dataset/gp_files/Fleetwood Mac/Fleetwood Mac - Dreams.gp3
+
+dataset/gp_files/Fleetwood Mac/Fleetwood Mac - The Chain.gp4
+
+dataset/mid_files/Bob Marley/Bob Marley - Waiting In Vain (ver 3 by Mauriciobasalo).mid
+
+dataset/mid_files/Fleetwood Mac/Fleetwood Mac - Dreams.mid
+
+dataset/mid_files/Fleetwood Mac/Fleetwood Mac - The Chain.mid
+
+decoded/All_I_Have_to_Do_Is_Dream.mid
+
+encoded/All_I_Have_to_Do_Is_Dream.pkl
+
+src/runs/Jul21_19-35-57_initnaf/
+
+src/runs/Jul21_19-39-35_initnaf/
+
+src/runs/Jul21_19-40-38_initnaf/
+
+src/runs/Jul21_19-49-21_initnaf/events.out.tfevents.1626907761.initnaf.89636.0
+
+src/runs/Jul21_19-49-21_initnaf/events.out.tfevents.1626907766.initnaf.89636.1
+
+src/runs/Jul21_19-49-21_initnaf/events.out.tfevents.1626907769.initnaf.89636.2
+
+src/runs/Jul21_19-49-21_initnaf/events.out.tfevents.1626907772.initnaf.89636.3
+
+src/runs/Jul21_19-49-21_initnaf/events.out.tfevents.1626907775.initnaf.89636.4
+
+src/runs/Jul21_19-49-21_initnaf/events.out.tfevents.1626907779.initnaf.89636.5
+
+src/runs/Jul21_19-49-21_initnaf/events.out.tfevents.1626907782.initnaf.89636.6
+
+src/runs/Jul21_19-49-21_initnaf/events.out.tfevents.1626907785.initnaf.89636.7
+
+src/runs/Jul21_19-49-21_initnaf/events.out.tfevents.1626907789.initnaf.89636.8
+
+src/runs/Jul21_19-49-21_initnaf/events.out.tfevents.1626907792.initnaf.89636.9
+
+src/runs/Jul21_19-55-05_initnaf/events.out.tfevents.1626908105.initnaf.89636.10
+
+src/runs/Jul21_19-55-05_initnaf/events.out.tfevents.1626908111.initnaf.89636.11
+
+src/runs/Jul21_19-55-05_initnaf/events.out.tfevents.1626908114.initnaf.89636.12
+
+src/runs/Jul21_19-55-05_initnaf/events.out.tfevents.1626908118.initnaf.89636.13
+
+src/runs/Jul21_19-55-05_initnaf/events.out.tfevents.1626908122.initnaf.89636.14
+
+src/runs/Jul21_19-55-05_initnaf/events.out.tfevents.1626908125.initnaf.89636.15
+
+src/runs/Jul21_19-55-05_initnaf/events.out.tfevents.1626908129.initnaf.89636.16
+
+src/runs/Jul21_19-55-05_initnaf/events.out.tfevents.1626908133.initnaf.89636.17
+
+src/runs/Jul21_19-55-05_initnaf/events.out.tfevents.1626908136.initnaf.89636.18
+
+src/runs/Jul21_19-55-05_initnaf/events.out.tfevents.1626908140.initnaf.89636.19
+
+src/runs/Jul21_19-55-56_initnaf/events.out.tfevents.1626908156.initnaf.89636.20
+
+src/runs/Jul21_19-55-56_initnaf/events.out.tfevents.1626908166.initnaf.89636.21
+
+src/runs/Jul21_19-55-56_initnaf/events.out.tfevents.1626908169.initnaf.89636.22
+
+src/runs/Jul21_19-55-56_initnaf/events.out.tfevents.1626908173.initnaf.89636.23
+
+src/runs/Jul21_19-55-56_initnaf/events.out.tfevents.1626908176.initnaf.89636.24
+
+src/runs/Jul21_19-55-56_initnaf/events.out.tfevents.1626908180.initnaf.89636.25
+
+src/runs/Jul21_19-55-56_initnaf/events.out.tfevents.1626908183.initnaf.89636.26
+
+src/runs/Jul21_19-55-56_initnaf/events.out.tfevents.1626908186.initnaf.89636.27
+
+src/runs/Jul21_19-55-56_initnaf/events.out.tfevents.1626908190.initnaf.89636.28
+
+src/runs/Jul21_19-55-56_initnaf/events.out.tfevents.1626908193.initnaf.89636.29
+
+src/runs/Jul21_19-59-35_initnaf/events.out.tfevents.1626908375.initnaf.90901.0
+
+src/runs/Jul21_19-59-35_initnaf/events.out.tfevents.1626908383.initnaf.90901.1
+
+src/runs/Jul21_19-59-35_initnaf/events.out.tfevents.1626908387.initnaf.90901.2
+
+src/runs/Jul21_19-59-35_initnaf/events.out.tfevents.1626908391.initnaf.90901.3
+
+src/runs/Jul21_19-59-35_initnaf/events.out.tfevents.1626908395.initnaf.90901.4
+
+src/runs/Jul21_19-59-35_initnaf/events.out.tfevents.1626908399.initnaf.90901.5
+
+src/runs/Jul21_19-59-35_initnaf/events.out.tfevents.1626908403.initnaf.90901.6
+
+src/runs/Jul21_19-59-35_initnaf/events.out.tfevents.1626908407.initnaf.90901.7
+
+src/runs/Jul21_19-59-35_initnaf/events.out.tfevents.1626908411.initnaf.90901.8
+
+src/runs/Jul21_19-59-35_initnaf/events.out.tfevents.1626908414.initnaf.90901.9
+
+src/runs/Jul21_20-02-48_initnaf/events.out.tfevents.1626908568.initnaf.91369.0
+
+src/runs/Jul21_20-02-48_initnaf/events.out.tfevents.1626908573.initnaf.91369.1
+
+src/runs/Jul21_20-02-48_initnaf/events.out.tfevents.1626908576.initnaf.91369.2
+
+src/runs/Jul21_20-02-48_initnaf/events.out.tfevents.1626908579.initnaf.91369.3
+
+src/runs/Jul21_20-02-48_initnaf/events.out.tfevents.1626908582.initnaf.91369.4
+
+src/runs/Jul21_20-02-48_initnaf/events.out.tfevents.1626908585.initnaf.91369.5
+
+src/runs/Jul21_20-02-48_initnaf/events.out.tfevents.1626908589.initnaf.91369.6
+
+src/runs/Jul21_20-02-48_initnaf/events.out.tfevents.1626908593.initnaf.91369.7
+
+src/runs/Jul21_20-02-48_initnaf/events.out.tfevents.1626908596.initnaf.91369.8
+
+src/runs/Jul21_20-02-48_initnaf/events.out.tfevents.1626908599.initnaf.91369.9
+
+src/runs/Jul21_20-31-54_initnaf/events.out.tfevents.1626910314.initnaf.95398.0
+
+src/runs/Jul21_20-31-54_initnaf/events.out.tfevents.1626910320.initnaf.95398.1
+
+src/runs/Jul21_20-31-54_initnaf/events.out.tfevents.1626910323.initnaf.95398.2
+
+src/runs/Jul21_20-31-54_initnaf/events.out.tfevents.1626910326.initnaf.95398.3
+
+src/runs/Jul21_20-31-54_initnaf/events.out.tfevents.1626910330.initnaf.95398.4
+
+src/runs/Jul21_20-31-54_initnaf/events.out.tfevents.1626910334.initnaf.95398.5
+
+src/runs/Jul21_20-31-54_initnaf/events.out.tfevents.1626910337.initnaf.95398.6
+
+src/runs/Jul21_20-31-54_initnaf/events.out.tfevents.1626910341.initnaf.95398.7
+
+src/runs/Jul21_20-31-54_initnaf/events.out.tfevents.1626910344.initnaf.95398.8
+
+src/runs/Jul21_20-31-54_initnaf/events.out.tfevents.1626910347.initnaf.95398.9
+
+src/runs/Jul22_10-50-26_initnaf/events.out.tfevents.1626961827.initnaf.101886.0
+
+src/runs/Jul22_10-50-26_initnaf/events.out.tfevents.1626961835.initnaf.101886.1
+
+src/runs/Jul22_10-50-26_initnaf/events.out.tfevents.1626961840.initnaf.101886.2
+
+src/runs/Jul22_10-50-26_initnaf/events.out.tfevents.1626961845.initnaf.101886.3
+
+src/runs/Jul22_10-50-26_initnaf/events.out.tfevents.1626961850.initnaf.101886.4
+
+src/runs/Jul22_10-50-26_initnaf/events.out.tfevents.1626961855.initnaf.101886.5
+
+src/runs/Jul22_10-50-26_initnaf/events.out.tfevents.1626961860.initnaf.101886.6
+
+src/runs/Jul22_10-50-26_initnaf/events.out.tfevents.1626961865.initnaf.101886.7
+
+src/runs/Jul22_10-50-26_initnaf/events.out.tfevents.1626961870.initnaf.101886.8
+
+src/runs/Jul22_10-50-26_initnaf/events.out.tfevents.1626961875.initnaf.101886.9
